Se envian cambios para logo y estilos en front

--- a/src/html/app.html
+++ b/src/html/app.html
@@ -1,72 +1,81 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Trámites Digitales</title>
-    <link rel="stylesheet" href="../css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-</head>
-<body>
+    <link rel="stylesheet" href="../css/styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <!-- Barra de navegación -->
     <nav>
-        <div class="logo">TrámitesDigitales</div>
-        <div class="nav-links">
-            <a href="#login">Iniciar Sesión</a>
-            <a href="#register">Registrarse</a>
-        </div>
+      <div class="logo">
+        <img src="../assets/logo.png" alt="Logo Trámites Digitales" />
+      </div>
+      <div class="nav-links">
+        <a href="#login">Iniciar Sesión</a>
+        <a href="#register">Registrarse</a>
+      </div>
     </nav>
 
     <!-- Sección principal -->
     <section class="hero">
-        <h1>Realiza tus trámites públicos en línea</h1>
-        <p>Simplificamos tus gestiones con el gobierno</p>
-        <button class="cta-button">
-            Comenzar ahora
-        </button>
+      <h1>Realiza tus trámites públicos en línea</h1>
+      <p>Simplificamos tus gestiones conla municipalidad</p>
+      <button class="cta-button">Comenzar ahora</button>
     </section>
 
     <!-- Sección de trámites populares -->
     <section class="services">
-        <h2>Trámites populares</h2>
-        <div class="services-grid">
-            <div class="service-card">
-                <i class="fas fa-id-card service-icon"></i>
-                <h3>Documentos de identidad</h3>
-                <p>Renovación y solicitud de documentos nacionales</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-car service-icon"></i>
-                <h3>Licencias de conducir</h3>
-                <p>Renovación y solicitud de licencias vehiculares</p>
-            </div>
-            <div class="service-card">
-                <i class="fas fa-home service-icon"></i>
-                <h3>Registro de propiedad</h3>
-                <p>Gestiones y consultas de registros inmobiliarios</p>
-            </div>
+      <h2>Trámites populares</h2>
+      <div class="services-grid">
+        <div class="service-card">
+          <i class="fas fa-id-card service-icon"></i>
+          <h3>Documentos de identidad</h3>
+          <p>Renovación y solicitud de documentos nacionales</p>
         </div>
+        <div class="service-card">
+          <i class="fas fa-car service-icon"></i>
+          <h3>Licencias de conducir</h3>
+          <p>Renovación y solicitud de licencias vehiculares</p>
+        </div>
+        <div class="service-card">
+          <i class="fas fa-home service-icon"></i>
+          <h3>Registro de propiedad</h3>
+          <p>Gestiones y consultas de registros inmobiliarios</p>
+        </div>
+      </div>
     </section>
 
     <!-- Footer -->
     <footer>
-        <div class="footer-content">
-            <div class="footer-section">
-                <h3>Contacto</h3>
-                <p>contacto@tramitesdigitales.com</p>
-                <p>+54 11 1234-5678</p>
-            </div>
-            <div class="footer-section">
-                <h3>Legal</h3>
-                <a href="#terms">Términos de uso</a>
-                <a href="#privacy">Privacidad</a>
-            </div>
-            <div class="footer-section">
-                <h3>Síguenos</h3>
-                <a href="#facebook"><i class="fab fa-facebook"></i> Facebook</a>
-                <a href="#twitter"><i class="fab fa-twitter"></i> Twitter</a>
-            </div>
+      <div class="footer-content">
+        <div class="footer-section">
+          <h3>Contacto</h3>
+          <p>contacto@tramitesdigitales.com</p>
+          <p>+54 11 1234-5678</p>
         </div>
+        <div class="footer-section">
+          <h3>Legal</h3>
+          <a href="#terms">Términos de uso</a>
+          <a href="#privacy">Privacidad</a>
+        </div>
+        <div class="footer-section">
+          <h3>Síguenos</h3>
+          <a href="#facebook"><i class="fab fa-facebook"></i> Facebook</a>
+          <a href="#twitter"><i class="fab fa-twitter"></i> Twitter</a>
+        </div>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
